re PR c++/56403 (internal compiler error: in build_zero_init_1, at cp/init.c:279)

PR c++/56403
	* init.c (build_zero_init_1): Use RECORD_OR_UNION_CODE_P instead
	of CLASS_TYPE_P.

	* g++.dg/torture/pr56403.C: New test.

From-SVN: r196661